# mcp-wrappers

./: .gitignore  CLAUDE.md  ProjectMCP.dxt.cmd  README.md
atproto/: README.md  atproto-wrapper.py  pyproject.toml
bash/: README.md  REQUIREMENTS.md  bash.py  cmd_shell.py
docmem/: .gitignore  SPEC_CLAUDE.md  SPEC_DOCMEM.md  SPEC_UI.md  package.json
docmem/.claude/: settings.local.json
docmem/public/: app.js  index.html  style.css
docmem/src/: index.ts
docmem/src/db/: connection.ts  queries.ts  schema.ts
docmem/src/domain/: hash.ts  id.ts  order.ts  types.ts
docmem/src/http/: server.ts
docmem/src/operations/: claudemd.ts  crud.ts  docmem.ts  insert.ts  query.ts  toml.ts  tree.ts
docmem/src/tools/: handler.ts  registry.ts
docmem/tests/: setup.ts
docmem/tests/domain/: hash.test.ts  order.test.ts  token.test.ts
docmem/tests/operations/: crud.test.ts  docmem.test.ts  insert.test.ts  (+3 more)
dreams/: README.md  package.json  tsconfig.json
dreams/src/: dreamscape.ts  dreamscapes.ts  emotions.ts  intro-text.ts  logger.ts  mcp-server.ts
hello-world/: README.md  hello-world.py  pyproject.toml
pjpd/: .coverage  CLAUDE.md  README.md  README_API.md  SPEC.md  epics.txt  ideas.txt  pjpd.txt  projectmcp.toml  pyproject.toml
pjpd/pjpd/: ideas.txt  pjpd.txt  tasks.txt
pjpd/resources/: intro.txt
pjpd/src/: config.py  mcp_wrapper.py  sample.py  validation.py
pjpd/tests/: .coverage  test_config.py  test_pjpd_subdirectory.py  test_validation.py
podman/: README.md  podman.py
shell/: README.md  REQUIREMENTS.md  background_reader.py  bash_shell.py  cmd_shell.py  persistent_cmd_shell.py  pyproject.toml  requirements.txt
toolman/: .mcp.json  README.md  SPEC.md  package.json  test-e2e.mjs  test-server.mjs  tools.toml  tsconfig.json
toolman/src/: config.ts  gateway.ts  index.ts
vecbook/: README.md  SPEC.md  pyproject.toml  requirements.txt  try_barycenter.py  try_http.py  vecbook.py  vecbook.toml  vecbook_http.py
vecbook/data/: sample1.txt  sample2.txt
vecbook/resources/: intro.txt
vecbook/resources/public/: index.css  index.html  index.js
vecbook/samples/: sample1.txt  sample2.txt
vecbook/src/: __init__.py  http_server.py  mcp.py  mcp_wrapper.py
vecbook/src/vecx/: README.md  __init__.py  vecbook_index.py
vecbook/tests/: test_mcp_wrapper_index.py  test_vecbook.py
vecbook/tests/testrec/: __init__.py  test_text_records_discover.py  test_text_records_parse.py
z3solver/: .gitignore  README.md  SPEC.md  package.json  test-final.js  test-local.js  test-validation.js
z3solver/examples/: simple.smt2  unsat.smt2
z3solver/src/: index.ts
(+31 files in other folders)
