[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vecbook"
version = "0.1.0"
description = "A vector-based document search system with MCP server"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "VecBook Team"}
]
keywords = ["vector-search", "mcp", "semantic-search", "embeddings"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastmcp>=0.1.0",
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.0",
    "toml>=0.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "flake8>=6.0.0",
]

[project.scripts]
vecbook = "src.vecbook:main"

[project.urls]
Homepage = "https://github.com/your-username/vecbook"
Repository = "https://github.com/your-username/vecbook"
Issues = "https://github.com/your-username/vecbook/issues"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"] 